Clean up fgpatchers for a minor performance boost